--- a/src/loading.ejs
+++ b/src/loading.ejs
@@ -10,6 +10,8 @@
       </script>
     <% } %>
     <style>
+      @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,600,700');
+
       html, body {
         height: 100%;
         width: 100%;
@@ -19,7 +21,7 @@
         background-color: #BBB;
         color: #666;
         font-size: 14px;
-        font-family: sans-serif;
+        font-family: 'Source Sans Pro', sans-serif;
       }
       .loading-screen {
         padding: 30vh 0;
