Refreshed header design to be more compact

--- a/src/loading.ejs
+++ b/src/loading.ejs
@@ -18,7 +18,7 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: #BBB;
+        background-color: #F4EFEA;
         color: #666;
         font-size: 14px;
         font-family: 'Source Sans Pro', sans-serif;
@@ -29,7 +29,7 @@
       }
 
       .loading-bar {
-        background-color: #999;
+        background-color: #AAA;
         position: relative;
         height: 6px;
         width: 80%;
@@ -43,7 +43,7 @@
       }
 
       .loading-bar:after {
-        background-color: #AAA;
+        background-color: #6823AE;
         content: '';
         height: 6px;
         width: 40px;
